Changelog for Miosix np embedded OS

v1.56
- Removed priority_queue.h and associated test in testsuite.
- Modified Mutex class to use the max heap implementation of the STL.
- Improved preemption points for EDF scheduler.
- Modifed Thread::wakeup(). Now it can no longer be called with the kernel
  paused. Added Thread::PKwakeup() that can be called with the kernel paused.
- Added preemption points in Thread::create(), Thread::setPriority() and
  Thread::wakeup(), active if the EDF scheduler is selected.
- Added file tick_interrupt.h with inline function IRQtickInterrupt() that
  factorizes code for the tick interrupt that was repeated once per target
  architecture.
- Adapted EDF scheduler to use class Priority
- Improved wakeup time in control based scheduler when waking from the idle
  thread.
- Added ControlScheduler::IRQgetIdleThread()
- Changed IRQwakeThreads(). Now it returns a bool.
- Modified control based scheduler for the introduction of the Priority class
- Added Priority class, so that different schedulers can redefine what priority
  means. Changed public interface of Thread class accordingly.
- Started implementing the EDF scheduler, defined three new member functions
  of the Thread class to be able to manage thread deadlines.
- Added Thread::sleepUntil() to make periodic sleeping more accurate.
  Also added a test for it in the testsuite.
- Changed data type for kernel tick from unsigned long long to long long.
  This also required to change the return value of getTick()
- Added files edf_scheduler.h and edf_scheduler.cpp
- Fixed bug in control scheduler: the outer regulator continued increasing
  the burst correction even if the set point could not be attained because of
  saturation of all inner integral regulators. This fix improves regulator
  performance when many threads are blocked.
- Updated openocd config files so that they work with newer releases of
  openocd. Note that this drops compatibility with openocd v0.1.0